syntax = "proto3";
package builderpb;

option go_package = "github.com/pygrum/monarch/pkg/protobuf/builderpb";

enum Status {
  Success = 0;
  FailedWithMessage = 1; // The message is contained as the first response in the responses field
}

// Internal /////////////////////////////////////////
message DescriptionsRequest {
  string builder_id = 1;
} // Empty request, needs no values
message Description {
  string name = 1;
  int32 opcode = 2;
  string usage = 3;
  string description_short = 4;
  string description_long = 5;
  int32 min_args = 6;
  int32 max_args = 7;
  bool admin = 8; // True if admin is needed to run the command
}
message DescriptionsReply {
  repeated Description descriptions = 1;
}
message OptionsRequest {
  string builder_id = 1;
}
message Option {
  string name = 1;
  string description = 2;
  string default = 3;
  bool required = 4;
  repeated string choices = 5;
  string type = 6;
}
message OptionsReply {
  repeated Option options = 1;
}
message BuildRequest {
  map<string, string> options = 1; // contains the agent ID
  string builder_id = 2;
}

message BuildReply {
  Status status = 1;
  string error = 2;
  bytes build = 3;
}
